# easy_file

./: .gitignore  .kilocodemodes  .pre-commit-config.yaml  404.html  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  combicode.txt  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
docs/: 01_refactor_copy.md  02-missing-async-methods.md  02_complete_test_coverage.md  03_fix_open_signature.md  04-deprecation-asyncio-get-event-loop.md  04_improve_atomic_write.md  05-dump-json-not-formatted.md  05_add_toml_support.md  06-copy-method-return-value.md  06_add_csv_support.md  07-missing-move-rename-methods.md  08-pyyaml-dependency-unused.md  09-type-hints-improvements.md  10-readme-version-mismatch.md  12-error-handling-consistency.md  Makefile  api.md  conf.py  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
easy_file/: __init__.py  easy_file.py
history/: index.html
installation/: index.html
plans/: project_remake.md
search/: search_index.json
src/easy_file/: __init__.py  easy_file.py
tests/: __init__.py  conftest.py  test_easy_file.py  test_edge_cases.py
usage/: index.html
